--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3,7 +3,7 @@
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1></h1>
-    <p class="lead"></p>
+    <p class="lead">Testing</p>
     <!--<img src="assets/images/yeoman.png" alt="I'm Yeoman">-->
   </div>
 </header>
@@ -20,4 +20,5 @@
 </div>
 
 <footer class="footer">
+  <p>Courtesy nodenver</p>
 </footer>
