--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,4 +1,4 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<!--<div ng-include="'components/navbar/navbar.html'"></div>-->
 
 <header class="hero-unit" id="banner">
   <div class="container">
@@ -20,5 +20,5 @@
 </div>
 
 <footer class="footer">
-  <p>Courtesy nodenver</p>
+  <!--<p>Courtesy nodenver</p>-->
 </footer>
