--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
     <!-- Add your site or application content here -->
     <div ui-view=""></div>
 
-    <div class="container">
+    <div class="container voting-frame-container">
       <iframe src="http://nodeknockout.com/iframe/nodedenver" frameborder=0 scrolling=no allowtransparency=true width=115 height=25></iframe>
     </div>
 
@@ -52,12 +52,13 @@
       <!-- bower:js -->
       <script src="bower_components/jquery/dist/jquery.js"></script>
       <script src="bower_components/angular/angular.js"></script>
-      <script src="bower_components/angular-resource/angular-resource.js"></script>
-      <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-      <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-      <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+      <script src="bower_components/angular-resource/angular-resource.js"></script>
+      <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+      <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
@@ -66,8 +67,11 @@
         
         <script src="app/app.js"></script>
           <!-- injector:js -->
+          <script src="app/directives/register/register.directive.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/restaurant/restaurant.controller.js"></script>
+          <script src="app/restaurant/restaurant.js"></script>
           <script src="app/services/geolocation/geolocation.service.js"></script>
           <script src="app/services/notification/notification.service.js"></script>
           <script src="app/services/rest-client/rest-client.service.js"></script>
