logo and name added

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3,7 +3,7 @@
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1>Welcome to {{restaurant.name}}</h1>
-    <img ng-src="{{restaurant.imageUrl}}" alt="{{restaurant.name}} logo">
+    <img ng-src="{{restaurant.image_url}}" alt="{{restaurant.name}} logo">
   </div>
 </header>
 
