--- a/client/app/directives/register/register.html
+++ b/client/app/directives/register/register.html
@@ -2,12 +2,12 @@
   <form name="registration" class="form-horizontal">
     <div class="form-group">
       <label for="lastName">Last Name:</label>
-      <input name="lastName" type="text" placeholder="Type your last name..."/>
+      <input ng-model="customer.lastName" name="lastName" type="text" placeholder="Type your last name..."/>
     </div>
     <div class="form-group">
       <label for="partySize">Party Size:</label>
-      <input name="partySize" type="number" />
+      <input ng-model="customer.partySize" name="partySize" type="number" />
     </div>
-    <button type="submit" class="btn btn-default btn-large">Submit</button>
+    <button type="submit" class="btn btn-default btn-large" ng-click="registerCustomer(customer)">Submit</button>
   </form>
 </div>
