--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -8,16 +8,21 @@
 </header>
 
 <div class="container">
-  <div class="row">
+  <div class="row" ng-hide="inRegistration">
     <div class="col-lg-12">
       <h1 class="page-header"></h1>
       <div class="register-button-container">
+        <p ng-if="isRegistered" class="lead">Party of {{customer.partySize}} for {{customer.lastName}} is waiting</p>
         <p class="lead">Current wait time is: 
           <span class="wait-time" ng-bind="getCurrentWaitTime() | date: 'mm:ss'"></span>
         </p>
-        <button class="btn btn-primary btn-lg" ng-click="showModal()">Put me on the list!</button>
+        <button ng-if="!isRegistered" class="btn btn-primary btn-lg" ng-click="showRegistration()">Put me on the list!</button>
+        <button ng-if="isRegistered" class="btn btn-danger btn-lg" ng-click="cancelRegistration(customer)">Cancel Table</button>
       </div>
     </div>
+  </div>
+  <div class="row" ng-show="inRegistration">
+    <register></register> 
   </div>
 </div>
 
