--- a/client/app/restaurant/restaurant.html
+++ b/client/app/restaurant/restaurant.html
@@ -3,7 +3,7 @@
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1>Welcome to {{restaurant.name}}</h1>
-    <img ng-src="{{restaurant.imageUrl}}" alt="{{restaurant.name}} logo">
+    <img ng-src="{{restaurant.image_url}}" alt="{{restaurant.name}} logo">
   </div>
 </header>
 
@@ -12,14 +12,15 @@
     <div class="col-lg-12">
       <h1 class="page-header"></h1>
       <p class="lead">Current wait time is: 
-        <span class="wait-time" ng-bind="getCurrentWaitTime() | date: 'mm:ss'"></span>
+        <span class="wait-time" ng-bind="getCurrentWaitTime()"></span>
       </p>
-      <ul class="customers">
-        <li ng-repeat="customer in customers track by $index">
-          <span>{{customer.lastName}}</span> 
-          <span>{{customer.partySize}}</span>
-        </li>
-      </ul>
+      <div ui-grid="gridOpts" class="myGrid"></div>
+      <!--<ul class="customers">-->
+        <!--<li ng-repeat="customer in customers track by $index">-->
+          <!--<span>{{customer.partyName}}</span> -->
+          <!--<span>{{customer.partySize}}</span>-->
+        <!--</li>-->
+      <!--</ul>-->
     </div>
   </div>
 </div>
