--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
     <div ui-view=""></div>
 
     <div class="container voting-frame-container">
-      <iframe src="http://nodeknockout.com/iframe/nodedenver" frameborder=0 scrolling=no allowtransparency=true width=115 height=25></iframe>
+      <iframe src="https://nodeknockout.com/iframe/nodedenver" frameborder=0 scrolling=no allowtransparency=true width=115 height=25></iframe>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
