--- a/client/app/restaurant/restaurant.html
+++ b/client/app/restaurant/restaurant.html
@@ -1,4 +1,4 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<!--<div ng-include="'components/navbar/navbar.html'"></div>-->
 
 <header class="hero-unit" id="banner">
   <div class="container">
@@ -15,12 +15,6 @@
         <span class="wait-time" ng-bind="getCurrentWaitTime()"></span>
       </p>
       <div ui-grid="gridOpts" class="myGrid"></div>
-      <!--<ul class="customers">-->
-        <!--<li ng-repeat="customer in customers track by $index">-->
-          <!--<span>{{customer.partyName}}</span> -->
-          <!--<span>{{customer.partySize}}</span>-->
-        <!--</li>-->
-      <!--</ul>-->
     </div>
   </div>
 </div>
