--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
     <div ui-view=""></div>
 
     <div class="container voting-frame-container">
-      <iframe src="https://nodeknockout.com/iframe/nodedenver" frameborder=0 scrolling=no allowtransparency=true width=115 height=25></iframe>
+      <iframe src="//nodeknockout.com/iframe/nodedenver" frameborder=0 scrolling=no allowtransparency=true width=115 height=25></iframe>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -61,6 +61,7 @@
       <script src="bower_components/angular-ui-grid/ui-grid.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="bower_components/moment/moment.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
